 * @Configuration support for JavaConfig as an alternative to XML.
 * Spring >= 4.0.0 is required to use JavaConfig and @EnableHdivWebSecurity feature
 * Ability to include an inner RequestDataValueProcessor to HdivRequestDataValueProcessor.
 * Spring Security CSRF token integration. Both, HDIV and Spring Security tokens are created.

Release 2.1.6
==================================

 * Fix form multipart issue (https://github.com/hdiv/hdiv/issues/44).
 * New 'org.hdiv.regex' package for Java regular expression execution abstraction.
 * New 'hdiv-docs' module with official documentation.
 * Include original parameter value in attack logs

Release 2.1.5
==================================

 * Java >= 1.5 is required.
 * Fix form field confidentiality error on RESTfull configuration (https://github.com/hdiv/hdiv/issues/31).
 * Hash and Cipher strategy support for Ajax requests (https://github.com/hdiv/hdiv/issues/36).
 * Support Spring 4.0.0 (4.0.0.BUILD-SNAPSHOT) and changes to org.springframework.web.servlet.support.RequestDataValueProcessor

Release 2.1.4
==================================

 * Use request method to define StartPages (https://github.com/hdiv/hdiv/issues/5).
 * Editable Validation and JSR303 validations in Spring MVC (https://github.com/hdiv/hdiv/issues/10).
 * Editable Validation support in Grails.
 * New 'showErrorPageOnEditableValidation' attribute in <hdiv:config> to show error page on Editable validation error.
 * Struts1 module for Hdiv. (Struts 1.3.8 support).
 * Fix Multipart request handing in Spring MVC (https://github.com/hdiv/hdiv/issues/14) and (https://github.com/hdiv/hdiv/issues/18).
 * JSF module for Hdiv. (JSF 1.1, 1.2, 2.0 and 2.1 support). Tested with Apache MyFaces and Sun RI.
 * Fix error with multivalue url params.
 * New 'sessionExpired' attribute in <hdiv:config> to define error pages when session has expired.