@@ -272,10 +272,10 @@
 					]]></xsd:documentation>
 				</xsd:annotation>
 			</xsd:attribute>
-			<xsd:attribute name="createNewPageInAjaxRequest" type="xsd:boolean" default="true">
+			<xsd:attribute name="reuseExistingPageInAjaxRequest" type="xsd:boolean" default="false">
 				<xsd:annotation>
 					<xsd:documentation><![CDATA[
-	Creates new HDIV page when an AJAX request is received
+	Reuse previous page when an AJAX request is received and don't create a new one. Defaults to false.
 					]]></xsd:documentation>
 				</xsd:annotation>
 			</xsd:attribute>
