@@ -27,7 +27,7 @@ http://www.hdiv.org/schema/hdiv http://www.hdiv.org/schema/hdiv/hdiv.xsd">
 		randomName="true" strategy="memory" maxPagesPerSession="20"
 		avoidCookiesConfidentiality="true" avoidValidationInUrlsWithoutParams="true"
 		debugMode="true" userData="testUserData"
-		showErrorPageOnEditableValidation="true" createNewPageInAjaxRequest="false">
+		showErrorPageOnEditableValidation="true" reuseExistingPageInAjaxRequest="true">
 		<hdiv:sessionExpired loginPage="/login.html" homePage="/"/>
 		<hdiv:startPages>page1,page2</hdiv:startPages>
 		<hdiv:startPages method="get">/onlyGet.html</hdiv:startPages>
